# compliance-as-code

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aigov/: __init__.py  aibom.py  cli.py  schema.py
controls/iso42001/: README.md
docs/adr/: 0001-evidence-as-cross-references.md
evidence/: README.md
mappings/eu-ai-act/: README.md
templates/: README.md
tests/: test_aibom.py  test_schema.py
