[project]
name = "aigov"
version = "0.1.0"
description = "ISO/IEC 42001 Annex A + EU AI Act Articles 12-15 as code. CLI + library + SPDX 3.0 AIBOM emitter."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Venkat Ramachandran" }]
keywords = ["ai-governance", "iso-42001", "eu-ai-act", "responsible-ai", "aibom", "spdx", "compliance-as-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pydantic>=2.7",
  "click>=8.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
aigov = "aigov.cli:cli"

[project.urls]
Homepage = "https://github.com/mindfulcto-labs/compliance-as-code"
Documentation = "https://github.com/mindfulcto-labs/compliance-as-code#readme"
Blog = "https://themindfulcto.com"
Issues = "https://github.com/mindfulcto-labs/compliance-as-code/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aigov"]

[tool.hatch.build.targets.wheel.shared-data]
"controls" = "controls"
"mappings" = "mappings"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
